Start menu page "A la Française", create header and one card

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div>
                 <header class="card-content">
                     <hgroup>
-                        <h2><a href="#" class="strong">À la française</a></h2>
+                        <h2><a href="a_la_francaise.html" class="strong">À la française</a></h2>
                         <h3 class="footer">Cité Rouge</h3>
                     </hgroup>
                     <div class="like">
