End menu page "A la Française"

--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -18,6 +18,9 @@
 <body>
 <!--Header-->
 <header>
+    <a href="index.html" class="back-btn">
+        <i class="fas fa-arrow-left"></i>
+    </a>
     <div class="logo">
         <img alt="logo" src="assets/images/logo/ohmyfood.png"/>
     </div>
@@ -32,7 +35,7 @@
     </div>
 
     <section class="full-width cards">
-        <h2>ENTRÉES</h2>
+        <h2 class="sub-title">ENTRÉES</h2>
         <article class="card">
             <hgroup>
                 <h1 class="menu-title">Tartare de poulpe acidulé</h1>
@@ -41,5 +44,104 @@
             </hgroup>
 
         </article>
+        <article class="card">
+            <hgroup>
+                <h1 class="menu-title">Velouté de légumes d'antan</h1>
+                <h2>Carotte, panais, topinambour</h2>
+                <span class="price">35€</span>
+            </hgroup>
+
+        </article>
+        <article class="card">
+            <hgroup>
+                <h1 class="menu-title">Soupe à l'oignon</h1>
+                <h2>Revisitée</h2>
+                <span class="price">20€</span>
+            </hgroup>
+
+        </article>
+    </section>
+
+
+    <section class="full-width cards">
+        <h2 class="sub-title">PLATS</h2>
+        <article class="card">
+            <hgroup>
+                <h1 class="menu-title">Coquilles Saint-Jacques</h1>
+                <h2>Accompagnées d'une purée de panais</h2>
+                <span class="price">40€</span>
+            </hgroup>
+
+        </article>
+        <article class="card">
+            <hgroup>
+                <h1 class="menu-title">Magret de canard</h1>
+                <h2>Et parmentier de pommes de terre</h2>
+                <span class="price">35€</span>
+            </hgroup>
+
+        </article>
+        <article class="card">
+            <hgroup>
+                <h1 class="menu-title">Pigeonneau d'Ille-et-Vilaine</h1>
+                <h2>Sur son lit de gnocchis aux légumes</h2>
+                <span class="price">44€</span>
+            </hgroup>
+
+        </article>
+    </section>
+
+    <section class="full-width cards">
+        <h2 class="sub-title">DESSERT</h2>
+        <article class="card">
+            <hgroup>
+                <h1 class="menu-title">Pétales de violettes glacés</h1>
+                <h2>Et purée de noisettes</h2>
+                <span class="price">18€</span>
+            </hgroup>
+
+        </article>
+        <article class="card">
+            <hgroup>
+                <h1 class="menu-title">Fondant au chocolat</h1>
+                <h2>Revisité</h2>
+                <span class="price">22€</span>
+            </hgroup>
+
+        </article>
+        <article class="card">
+            <hgroup>
+                <h1 class="menu-title">Millefeuille croustillant</h1>
+                <h2>Mirtilles et pâte d'amande</h2>
+                <span class="price">23€</span>
+            </hgroup>
+
+        </article>
+    </section>
+
+    <section class="full-width order">
+        <a class="show-btn button1" href="#">
+            <button>Commander</button>
+        </a>
     </section>
 </main>
+<footer>
+
+    <div id="footer">
+        <div class="logo">
+            <img alt="filter applied" src="assets/images/logo/ohmyfood.png">
+        </div>
+        <div class="col-3">
+            <ul class="one footer-icon">
+                <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+                <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+            </ul>
+            <ul class="one">
+                <li><a href="#">Mentions légales</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+</footer>
+</body>
+</html>
