Fix menu page "A la Française" card and transitions

--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -42,6 +42,9 @@
                 <h2>Aux zestes d'orange</h2>
                 <span class="price">25€</span>
             </hgroup>
+            <div class="caption-check-box">
+                <i class="fas fa-check-circle"></i>
+            </div>
 
         </article>
         <article class="card">
@@ -50,7 +53,9 @@
                 <h2>Carotte, panais, topinambour</h2>
                 <span class="price">35€</span>
             </hgroup>
-
+            <div class="caption-check-box">
+                <i class="fas fa-check-circle"></i>
+            </div>
         </article>
         <article class="card">
             <hgroup>
@@ -58,7 +63,9 @@
                 <h2>Revisitée</h2>
                 <span class="price">20€</span>
             </hgroup>
-
+            <div class="caption-check-box">
+                <i class="fas fa-check-circle"></i>
+            </div>
         </article>
     </section>
 
@@ -71,7 +78,9 @@
                 <h2>Accompagnées d'une purée de panais</h2>
                 <span class="price">40€</span>
             </hgroup>
-
+            <div class="caption-check-box">
+                <i class="fas fa-check-circle"></i>
+            </div>
         </article>
         <article class="card">
             <hgroup>
@@ -79,7 +88,9 @@
                 <h2>Et parmentier de pommes de terre</h2>
                 <span class="price">35€</span>
             </hgroup>
-
+            <div class="caption-check-box">
+                <i class="fas fa-check-circle"></i>
+            </div>
         </article>
         <article class="card">
             <hgroup>
@@ -87,7 +98,9 @@
                 <h2>Sur son lit de gnocchis aux légumes</h2>
                 <span class="price">44€</span>
             </hgroup>
-
+            <div class="caption-check-box">
+                <i class="fas fa-check-circle"></i>
+            </div>
         </article>
     </section>
 
@@ -99,7 +112,9 @@
                 <h2>Et purée de noisettes</h2>
                 <span class="price">18€</span>
             </hgroup>
-
+            <div class="caption-check-box">
+                <i class="fas fa-check-circle"></i>
+            </div>
         </article>
         <article class="card">
             <hgroup>
@@ -107,7 +122,9 @@
                 <h2>Revisité</h2>
                 <span class="price">22€</span>
             </hgroup>
-
+            <div class="caption-check-box">
+                <i class="fas fa-check-circle"></i>
+            </div>
         </article>
         <article class="card">
             <hgroup>
@@ -115,7 +132,9 @@
                 <h2>Mirtilles et pâte d'amande</h2>
                 <span class="price">23€</span>
             </hgroup>
-
+            <div class="caption-check-box">
+                <i class="fas fa-check-circle"></i>
+            </div>
         </article>
     </section>
 
