Update html structure

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <link href="https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/style.css" rel="stylesheet"/>
+    <link href="assets/css/animations.css" rel="stylesheet"/>
     <link href="assets/css/media.css" rel="stylesheet"/>
 
-    <title>Home | Ohmyfood</title>
+    <title>Bienvenue sur la page d'acceuil | Ohmyfood</title>
+
 </head>
 <body>
 <!--Header-->
