--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -11,11 +11,12 @@
     <link href="https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/style.css" rel="stylesheet"/>
+    <link href="assets/css/animations.css" rel="stylesheet"/>
     <link href="assets/css/media.css" rel="stylesheet"/>
 
     <title>À la française restaurant | Ohmyfood</title>
 </head>
-<body>
+<body class="menu">
 <!--Header-->
 <header>
     <a href="index.html" class="back-btn">
@@ -29,9 +30,13 @@
     </div>
 </header>
 
-<main class="bg-grey menu">
-    <div>
+<main class="bg-grey">
+    <div class="restaurant-title">
         <h1 class="shrikhand">À la française</h1>
+        <div class="like">
+            <i class="far fa-heart default-icon"></i>
+            <i class="fas fa-heart hover-icon"></i>
+        </div>
     </div>
 
     <section class="full-width cards">
@@ -40,8 +45,10 @@
             <hgroup>
                 <h1 class="menu-title">Tartare de poulpe acidulé</h1>
                 <h2>Aux zestes d'orange</h2>
-                <span class="price">25€</span>
             </hgroup>
+            <div class="price">
+                <span>25€</span>
+            </div>
             <div class="caption-check-box">
                 <i class="fas fa-check-circle"></i>
             </div>
@@ -51,8 +58,10 @@
             <hgroup>
                 <h1 class="menu-title">Velouté de légumes d'antan</h1>
                 <h2>Carotte, panais, topinambour</h2>
-                <span class="price">35€</span>
             </hgroup>
+            <div class="price">
+                <span>35€</span>
+            </div>
             <div class="caption-check-box">
                 <i class="fas fa-check-circle"></i>
             </div>
@@ -61,11 +70,14 @@
             <hgroup>
                 <h1 class="menu-title">Soupe à l'oignon</h1>
                 <h2>Revisitée</h2>
-                <span class="price">20€</span>
             </hgroup>
+            <div class="price">
+                <span>25€</span>
+            </div>
             <div class="caption-check-box">
                 <i class="fas fa-check-circle"></i>
             </div>
+
         </article>
     </section>
 
@@ -76,8 +88,10 @@
             <hgroup>
                 <h1 class="menu-title">Coquilles Saint-Jacques</h1>
                 <h2>Accompagnées d'une purée de panais</h2>
-                <span class="price">40€</span>
             </hgroup>
+            <div class="price">
+                <span>40€</span>
+            </div>
             <div class="caption-check-box">
                 <i class="fas fa-check-circle"></i>
             </div>
@@ -86,8 +100,10 @@
             <hgroup>
                 <h1 class="menu-title">Magret de canard</h1>
                 <h2>Et parmentier de pommes de terre</h2>
-                <span class="price">35€</span>
             </hgroup>
+            <div class="price">
+                <span>35€</span>
+            </div>
             <div class="caption-check-box">
                 <i class="fas fa-check-circle"></i>
             </div>
@@ -96,8 +112,10 @@
             <hgroup>
                 <h1 class="menu-title">Pigeonneau d'Ille-et-Vilaine</h1>
                 <h2>Sur son lit de gnocchis aux légumes</h2>
-                <span class="price">44€</span>
             </hgroup>
+            <div class="price">
+                <span>44€</span>
+            </div>
             <div class="caption-check-box">
                 <i class="fas fa-check-circle"></i>
             </div>
@@ -110,8 +128,10 @@
             <hgroup>
                 <h1 class="menu-title">Pétales de violettes glacés</h1>
                 <h2>Et purée de noisettes</h2>
-                <span class="price">18€</span>
             </hgroup>
+            <div class="price">
+                <span>18€</span>
+            </div>
             <div class="caption-check-box">
                 <i class="fas fa-check-circle"></i>
             </div>
@@ -120,8 +140,10 @@
             <hgroup>
                 <h1 class="menu-title">Fondant au chocolat</h1>
                 <h2>Revisité</h2>
-                <span class="price">22€</span>
             </hgroup>
+            <div class="price">
+                <span>22€</span>
+            </div>
             <div class="caption-check-box">
                 <i class="fas fa-check-circle"></i>
             </div>
@@ -130,8 +152,10 @@
             <hgroup>
                 <h1 class="menu-title">Millefeuille croustillant</h1>
                 <h2>Mirtilles et pâte d'amande</h2>
-                <span class="price">23€</span>
             </hgroup>
+            <div class="price">
+                <span>23€</span>
+            </div>
             <div class="caption-check-box">
                 <i class="fas fa-check-circle"></i>
             </div>
