Remove until <br>

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section class="bg-grey reserve">
         <hgroup>
             <h1>Réservez le menu qui vous convient</h1><br>
-            <h2> Découvrez des restaurants d'exception, séléctionnés par nos soins.</h2><br>
+            <h2> Découvrez des restaurants d'exception, séléctionnés par nos soins.</h2>
         </hgroup>
         <a class="show-btn button1" href="#">
             <button>Explorez nos restaurants</button>
