Add mailto "contact link in footer"

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <main>
     <section class="bg-grey reserve">
         <hgroup>
-            <h1>Réservez le menu qui vous convient</h1><br>
+            <h1>Réservez le menu qui vous convient</h1>
             <h2> Découvrez des restaurants d'exception, séléctionnés par nos soins.</h2>
         </hgroup>
         <a class="show-btn button1" href="#">
@@ -153,7 +153,7 @@
             </ul>
             <ul class="one">
                 <li><a href="#">Mentions légales</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="mailto:test@test.local">Contact</a></li>
             </ul>
         </div>
     </div>
