Create new menu page (le delice des sens)

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 </div>
                 <header class="card-content">
                     <hgroup>
-                        <h2><a href="#" class="strong">Le délice des sens</a></h2>
+                        <h2><a href="le_delice_des_sens.html" class="strong">Le délice des sens</a></h2>
                         <h3 class="footer">Folie-Méricourt</h3>
                     </hgroup>
                     <div class="like">
