--- a/la_note_enchante.html
+++ b/la_note_enchante.html
@@ -14,7 +14,7 @@
     <link href="assets/css/animations.css" rel="stylesheet"/>
     <link href="assets/css/media.css" rel="stylesheet"/>
 
-    <title>Le délice des sens restaurant | Ohmyfood</title>
+    <title>La note enchanté restaurant | Ohmyfood</title>
 </head>
 <body class="menu">
 <!--Header-->
@@ -26,7 +26,7 @@
         <img alt="logo" src="assets/images/logo/ohmyfood.png"/>
     </div>
     <div class="cover-img">
-        <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
+        <img alt="La note enchanté restaurant" src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
     </div>
 </header>
 
