--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -26,7 +26,7 @@
         <img alt="logo" src="assets/images/logo/ohmyfood.png"/>
     </div>
     <div class="cover-img">
-        <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
+        <img alt="Le délice des sens restaurant" src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
     </div>
 </header>
 
