Add new link 'la note enchante' menu page

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </div>
                 <header class="card-content">
                     <hgroup>
-                        <h2><a href="#" class="strong">La note enchantée</a></h2>
+                        <h2><a href="la_note_enchante.html" class="strong">La note enchantée</a></h2>
                         <h3 class="footer">Charonne</h3>
                     </hgroup>
                     <div class="like">
