Add in home link to page (la palette du gout)

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </div>
                 <header class="card-content">
                     <hgroup>
-                        <h2><a href="#" class="strong">La palette du goût</a></h2>
+                        <h2><a href="la_palette_du_gout.html" class="strong">La palette du goût</a></h2>
                         <h3 class="footer">Ménilmontant</h3>
                     </hgroup>
                     <div class="like">
