Fix W3C validator error <button> in <a>

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h2> Découvrez des restaurants d'exception, séléctionnés par nos soins.</h2>
         </hgroup>
         <a class="show-btn button1" href="#">
-            <button>Explorez nos restaurants</button>
+            Explorez nos restaurants
         </a>
     </section>
     <aside class="menu-step">
