--- a/la_note_enchante.html
+++ b/la_note_enchante.html
@@ -177,7 +177,7 @@
 
     <section class="full-width order">
         <a class="show-btn button1" href="#">
-            <button>Commander</button>
+            Commander
         </a>
     </section>
 </main>
