--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -164,7 +164,7 @@
 
     <section class="full-width order">
         <a class="show-btn button1" href="#">
-            <button>Commander</button>
+            Commander
         </a>
     </section>
 </main>
