Fix W3C validator warning menu pages

--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -26,7 +26,7 @@
         <img alt="logo" src="assets/images/logo/ohmyfood.png"/>
     </div>
     <div class="cover-img">
-        <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
+        <img alt="page-cover" src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
     </div>
 </header>
 
@@ -43,8 +43,8 @@
         <h2 class="sub-title">ENTRÉES</h2>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Tartare de poulpe acidulé</h1>
-                <h2>Aux zestes d'orange</h2>
+                <h2 class="menu-title">Tartare de poulpe acidulé</h2>
+                <h3>Aux zestes d'orange</h3>
             </hgroup>
             <div class="price">
                 <span>25€</span>
@@ -56,8 +56,8 @@
         </article>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Velouté de légumes d'antan</h1>
-                <h2>Carotte, panais, topinambour</h2>
+                <h2 class="menu-title">Velouté de légumes d'antan</h2>
+                <h3>Carotte, panais, topinambour</h3>
             </hgroup>
             <div class="price">
                 <span>35€</span>
@@ -68,8 +68,8 @@
         </article>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Soupe à l'oignon</h1>
-                <h2>Revisitée</h2>
+                <h2 class="menu-title">Soupe à l'oignon</h2>
+                <h3>Revisitée</h3>
             </hgroup>
             <div class="price">
                 <span>25€</span>
@@ -86,8 +86,8 @@
         <h2 class="sub-title">PLATS</h2>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Coquilles Saint-Jacques</h1>
-                <h2>Accompagnées d'une purée de panais</h2>
+                <h2 class="menu-title">Coquilles Saint-Jacques</h2>
+                <h3>Accompagnées d'une purée de panais</h3>
             </hgroup>
             <div class="price">
                 <span>40€</span>
@@ -98,8 +98,8 @@
         </article>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Magret de canard</h1>
-                <h2>Et parmentier de pommes de terre</h2>
+                <h2 class="menu-title">Magret de canard</h2>
+                <h3>Et parmentier de pommes de terre</h3>
             </hgroup>
             <div class="price">
                 <span>35€</span>
@@ -110,8 +110,8 @@
         </article>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Pigeonneau d'Ille-et-Vilaine</h1>
-                <h2>Sur son lit de gnocchis aux légumes</h2>
+                <h2 class="menu-title">Pigeonneau d'Ille-et-Vilaine</h2>
+                <h3>Sur son lit de gnocchis aux légumes</h3>
             </hgroup>
             <div class="price">
                 <span>44€</span>
@@ -126,8 +126,8 @@
         <h2 class="sub-title">DESSERT</h2>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Pétales de violettes glacés</h1>
-                <h2>Et purée de noisettes</h2>
+                <h2 class="menu-title">Pétales de violettes glacés</h2>
+                <h3>Et purée de noisettes</h3>
             </hgroup>
             <div class="price">
                 <span>18€</span>
@@ -138,8 +138,8 @@
         </article>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Fondant au chocolat</h1>
-                <h2>Revisité</h2>
+                <h2 class="menu-title">Fondant au chocolat</h2>
+                <h3>Revisité</h3>
             </hgroup>
             <div class="price">
                 <span>22€</span>
@@ -150,8 +150,8 @@
         </article>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Millefeuille croustillant</h1>
-                <h2>Mirtilles et pâte d'amande</h2>
+                <h2 class="menu-title">Millefeuille croustillant</h2>
+                <h3>Mirtilles et pâte d'amande</h3>
             </hgroup>
             <div class="price">
                 <span>23€</span>
@@ -162,14 +162,13 @@
         </article>
     </section>
 
-    <section class="full-width order">
+    <aside class="full-width order">
         <a class="show-btn button1" href="#">
             Commander
         </a>
-    </section>
+    </aside>
 </main>
 <footer>
-
     <div id="footer">
         <div class="logo">
             <img alt="filter applied" src="assets/images/logo/ohmyfood.png">
