--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -43,8 +43,8 @@
         <h2 class="sub-title">ENTRÉES</h2>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Tartare de thon</h1>
-                <h2>Assaisonné au yuzu</h2>
+                <h2 class="menu-title">Tartare de thon</h2>
+                <h3>Assaisonné au yuzu</h3>
             </hgroup>
             <div class="price">
                 <span>25€</span>
@@ -56,8 +56,8 @@
         </article>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Bouchée de homard croustillant</h1>
-                <h2>Et sa farandole de petits légumes</h2>
+                <h2 class="menu-title">Bouchée de homard croustillant</h2>
+                <h3>Et sa farandole de petits légumes</h3>
             </hgroup>
             <div class="price">
                 <span>35€</span>
@@ -68,8 +68,8 @@
         </article>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Velouté de cèpes</h1>
-                <h2>Aux truffes</h2>
+                <h2 class="menu-title">Velouté de cèpes</h2>
+                <h3>Aux truffes</h3>
             </hgroup>
             <div class="price">
                 <span>25€</span>
@@ -86,8 +86,8 @@
         <h2 class="sub-title">PLATS</h2>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Poulet rôti aux herbes de provence</h1>
-                <h2>Et sa crème de truffe</h2>
+                <h2 class="menu-title">Poulet rôti aux herbes de provence</h2>
+                <h3>Et sa crème de truffe</h3>
             </hgroup>
             <div class="price">
                 <span>40€</span>
@@ -98,8 +98,8 @@
         </article>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Langouste rôtie</h1>
-                <h2>Et ses légumes de saison</h2>
+                <h2 class="menu-title">Langouste rôtie</h2>
+                <h3>Et ses légumes de saison</h3>
             </hgroup>
             <div class="price">
                 <span>35€</span>
@@ -110,8 +110,8 @@
         </article>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Côte de boeuf angus</h1>
-                <h2>Et sa purée de panais</h2>
+                <h2 class="menu-title">Côte de boeuf angus</h2>
+                <h3>Et sa purée de panais</h3>
             </hgroup>
             <div class="price">
                 <span>44€</span>
@@ -126,8 +126,8 @@
         <h2 class="sub-title">DESSERT</h2>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Farandole de desserts</h1>
-                <h2>Du chef</h2>
+                <h2 class="menu-title">Farandole de desserts</h2>
+                <h3>Du chef</h3>
             </hgroup>
             <div class="price">
                 <span>18€</span>
@@ -138,8 +138,8 @@
         </article>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Crème brulée</h1>
-                <h2>Revisité</h2>
+                <h2 class="menu-title">Crème brulée</h2>
+                <h3>Revisité</h3>
             </hgroup>
             <div class="price">
                 <span>22€</span>
@@ -150,8 +150,8 @@
         </article>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Tiramisu</h1>
-                <h2>À la noisette</h2>
+                <h2 class="menu-title">Tiramisu</h2>
+                <h3>À la noisette</h3>
             </hgroup>
             <div class="price">
                 <span>23€</span>
@@ -162,14 +162,13 @@
         </article>
     </section>
 
-    <section class="full-width order">
+    <aside class="full-width order">
         <a class="show-btn button1" href="#">
             Commander
         </a>
-    </section>
+    </aside>
 </main>
 <footer>
-
     <div id="footer">
         <div class="logo">
             <img alt="filter applied" src="assets/images/logo/ohmyfood.png">
