--- a/la_note_enchante.html
+++ b/la_note_enchante.html
@@ -43,8 +43,8 @@
         <h2 class="sub-title">ENTRÉES</h2>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Ravioles de foie gras</h1>
-                <h2>Accompagnés de leur crème à la truffe</h2>
+                <h2 class="menu-title">Ravioles de foie gras</h2>
+                <h3>Accompagnés de leur crème à la truffe</h3>
             </hgroup>
             <div class="price">
                 <span>25€</span>
@@ -56,8 +56,8 @@
         </article>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Caviar osciétre</h1>
-                <h2>Sur blini à la farine de blé noir</h2>
+                <h2 class="menu-title">Caviar osciétre</h2>
+                <h3>Sur blini à la farine de blé noir</h3>
             </hgroup>
             <div class="price">
                 <span>35€</span>
@@ -68,8 +68,8 @@
         </article>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Homard et espuma de...</h1>
-                <h2>Mariné aux zests d'orange</h2>
+                <h2 class="menu-title">Homard et espuma de...</h2>
+                <h3>Mariné aux zests d'orange</h3>
             </hgroup>
             <div class="price">
                 <span>25€</span>
@@ -81,8 +81,8 @@
         </article>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Foie gras de canard cuit entier</h1>
-                <h2>Confiture de figue et pain toasté</h2>
+                <h2 class="menu-title">Foie gras de canard cuit entier</h2>
+                <h3>Confiture de figue et pain toasté</h3>
             </hgroup>
             <div class="price">
                 <span>35€</span>
@@ -99,8 +99,8 @@
         <h2 class="sub-title">PLATS</h2>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Noix de coquilles Saint-Jacques</h1>
-                <h2>Sur son lit de purée de céleri-rave</h2>
+                <h2 class="menu-title">Noix de coquilles Saint-Jacques</h2>
+                <h3>Sur son lit de purée de céleri-rave</h3>
             </hgroup>
             <div class="price">
                 <span>40€</span>
@@ -111,8 +111,8 @@
         </article>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Langoustine poêlée</h1>
-                <h2>Purée de patate douce</h2>
+                <h2 class="menu-title">Langoustine poêlée</h2>
+                <h3>Purée de patate douce</h3>
             </hgroup>
             <div class="price">
                 <span>35€</span>
@@ -123,8 +123,8 @@
         </article>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Mijoté de queue de boeuf</h1>
-                <h2>Et riz sauvage aux zests de citron</h2>
+                <h2 class="menu-title">Mijoté de queue de boeuf</h2>
+                <h3>Et riz sauvage aux zests de citron</h3>
             </hgroup>
             <div class="price">
                 <span>44€</span>
@@ -139,8 +139,8 @@
         <h2 class="sub-title">DESSERT</h2>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Macaron noisette et chocolat</h1>
-                <h2>Glace au caramel brun et sel de Guérande</h2>
+                <h2 class="menu-title">Macaron noisette et chocolat</h2>
+                <h3>Glace au caramel brun et sel de Guérande</h3>
             </hgroup>
             <div class="price">
                 <span>18€</span>
@@ -151,8 +151,8 @@
         </article>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Baba au rhum revisité</h1>
-                <h2>Avec son coulis de citron</h2>
+                <h2 class="menu-title">Baba au rhum revisité</h2>
+                <h3>Avec son coulis de citron</h3>
             </hgroup>
             <div class="price">
                 <span>22€</span>
@@ -163,8 +163,8 @@
         </article>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Tarte au citron meringuée</h1>
-                <h2>Destructurée</h2>
+                <h2 class="menu-title">Tarte au citron meringuée</h2>
+                <h3>Destructurée</h3>
             </hgroup>
             <div class="price">
                 <span>23€</span>
@@ -175,14 +175,13 @@
         </article>
     </section>
 
-    <section class="full-width order">
+    <aside class="full-width order">
         <a class="show-btn button1" href="#">
             Commander
         </a>
-    </section>
+    </aside>
 </main>
 <footer>
-
     <div id="footer">
         <div class="logo">
             <img alt="filter applied" src="assets/images/logo/ohmyfood.png">
