--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -43,8 +43,8 @@
         <h2 class="sub-title">ENTRÉES</h2>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Fricassée d'escargot</h1>
-                <h2>u piment d'espelette</h2>
+                <h2 class="menu-title">Fricassée d'escargot</h2>
+                <h3>Au piment d'espelette</h3>
             </hgroup>
             <div class="price">
                 <span>25€</span>
@@ -56,8 +56,8 @@
         </article>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Foie gras de canard mi-cuit</h1>
-                <h2>Et ses copeaux de truffe noire</h2>
+                <h2 class="menu-title">Foie gras de canard mi-cuit</h2>
+                <h3>Et ses copeaux de truffe noire</h3>
             </hgroup>
             <div class="price">
                 <span>35€</span>
@@ -68,8 +68,8 @@
         </article>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Oeuf au plat</h1>
-                <h2>Assaisonné à la truffe sur lit de...</h2>
+                <h2 class="menu-title">Oeuf au plat</h2>
+                <h3>Assaisonné à la truffe sur lit de...</h3>
             </hgroup>
             <div class="price">
                 <span>20€</span>
@@ -86,8 +86,8 @@
         <h2 class="sub-title">PLATS</h2>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Filet de boeuf aux herbes</h1>
-                <h2>Accompagné de sa ribambelle de légumes</h2>
+                <h2 class="menu-title">Filet de boeuf aux herbes</h2>
+                <h3>Accompagné de sa ribambelle de légumes</h3>
             </hgroup>
             <div class="price">
                 <span>40€</span>
@@ -98,8 +98,8 @@
         </article>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Parmantier de queue de boeuf</h1>
-                <h2>À la truffe noire sur sa purée de panais</h2>
+                <h2 class="menu-title">Parmantier de queue de boeuf</h2>
+                <h3>À la truffe noire sur sa purée de panais</h3>
             </hgroup>
             <div class="price">
                 <span>35€</span>
@@ -110,8 +110,8 @@
         </article>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Filet de Turbot</h1>
-                <h2>Aux agrumes</h2>
+                <h2 class="menu-title">Filet de Turbot</h2>
+                <h3>Aux agrumes</h3>
             </hgroup>
             <div class="price">
                 <span>44€</span>
@@ -126,8 +126,8 @@
         <h2 class="sub-title">DESSERT</h2>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Paris-Brest</h1>
-                <h2>Revisité</h2>
+                <h2 class="menu-title">Paris-Brest</h2>
+                <h3>Revisité</h3>
             </hgroup>
             <div class="price">
                 <span>18€</span>
@@ -138,8 +138,8 @@
         </article>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Macaron au chocolat d'exception</h1>
-                <h2>Et grace à la vanille de Madagascar</h2>
+                <h2 class="menu-title">Macaron au chocolat d'exception</h2>
+                <h3>Et grace à la vanille de Madagascar</h3>
             </hgroup>
             <div class="price">
                 <span>22€</span>
@@ -150,8 +150,8 @@
         </article>
         <article class="card">
             <hgroup>
-                <h1 class="menu-title">Mousse au chocolat</h1>
-                <h2>Au piment d'espelette et à la truffe noire</h2>
+                <h2 class="menu-title">Mousse au chocolat</h2>
+                <h3>Au piment d'espelette et à la truffe noire</h3>
             </hgroup>
             <div class="price">
                 <span>23€</span>
@@ -162,14 +162,13 @@
         </article>
     </section>
 
-    <section class="full-width order">
+    <aside class="full-width order">
         <a class="show-btn button1" href="#">
             Commander
         </a>
-    </section>
+    </aside>
 </main>
 <footer>
-
     <div id="footer">
         <div class="logo">
             <img alt="filter applied" src="assets/images/logo/ohmyfood.png">
