Fix - Change div images to <figure>

--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -40,9 +40,9 @@
     <div class="logo">
         <img alt="logo" src="assets/images/logo/ohmyfood.png"/>
     </div>
-    <div class="cover-img">
+    <figure class="cover-img">
         <img alt="La palette du goût restaurant" src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
-    </div>
+    </figure>
 </header>
 
 <main class="bg-grey">
