--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -41,9 +41,9 @@
     <div class="logo">
         <img alt="logo" src="assets/images/logo/ohmyfood.png"/>
     </div>
-    <div class="cover-img">
+    <figure class="cover-img">
         <img alt="page-cover" src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
-    </div>
+    </figure>
 </header>
 
 <main class="bg-grey">
