--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -42,10 +42,10 @@
     <div class="logo">
         <img alt="logo" src="assets/images/logo/ohmyfood.png"/>
     </div>
-    <div class="cover-img">
+    <figure class="cover-img">
         <img alt="Le délice des sens restaurant"
              src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
-    </div>
+    </figure>
 </header>
 
 <main class="bg-grey">
