Fix - Change html element

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </header>
 
         <main>
-            <section class="bg-grey reserve fade-1">
+            <article class="bg-grey reserve fade-1">
                 <hgroup>
                     <h1>Réservez le menu qui vous convient</h1>
                     <h2> Découvrez des restaurants d'exception, séléctionnés par nos soins.</h2>
@@ -63,7 +63,7 @@
                 <a class="show-btn button1" href="#">
                     Explorez nos restaurants
                 </a>
-            </section>
+            </article>
             <aside class="menu-step">
                 <h1 class="fade-1">Fonctionnement</h1>
                 <div class="select">
